--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,8 +7,18 @@ html, body {
     height: 75%;
     vertical-align: baseline;
     padding-top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
 }
-
+#children-wrapper
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items:center;
+}
 #root {
     height: 100%;
 }
@@ -16,8 +26,12 @@ html, body {
 .heading {
     color: white;
     text-align: center;
-    position: relative;
-    top: -15%;
+       top: -15%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+
 }
 
 .holder {
